# bookmeterjson

./: .gitignore  README.md  configs.example.yaml  pyproject.toml
.github/workflows/: ruff.yml  spdx.yml
src/bookmeterjson/: __main__.py  config.py  models.py  scraper.py
