[project]
name = "bookmeterjson"
version = "0.1.0"
description = "Bookmeter.com scraper with JSON output"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "selenium>=4.41.0",
    "beautifulsoup4 >= 4.14.3",
    "pyyaml >= 6.0.3",
]

[project.scripts]
bookmeterjson = "bookmeterjson.__main__:main"

[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

# Development purposes only
[project.optional-dependencies]
dev = ["ruff >= 0.15.5"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "PL", # Pylint
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "W" # pycodestyle Warning
]
ignore = [
    "TC001" # typing-only-first-party-import
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
